--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,9 @@
-<h1>Hello Rails</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Greetings</title>
+</head>
+<body>
+<h1>Hello World</h1>
+</body>
+</html>
