added about page and made the site dynamic

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,4 @@
-<h1>Sample App</h1>
+<h1>About Us</h1>
 <p>
 This is <a href="http://www.winstonhuxley.com">Winston Huxley's</a> web app test.
 </p>
-
-
