--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>Contact US</h1>
+<p>
+Contact <a href="http://winstonhuxley.com/contact">winston </a> for any questions regarding the web application built.
+</p>
